[tool.poetry]
name = "bnf"
version = "0.1.0"
description = ""
authors = ["Malte Titze <mtitze@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
mpmath = "^1.2.1"
sympy = "^1.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.4.2"
matplotlib = "^3.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
